feat: Adding auth APIs to respond now (#3)
* feat: Adding auth APIs for respondnow server
